<resources>
    <string name="app_name">Nacho Notch</string>

    <!--Titles-->
    <string name="hide_notch">Hide Notch</string>
    <string name="show_notch">Show Notch</string>
    <string name="configure_for_tasker">Show or Hide Notch</string>
    <string name="enable_launcher">Enable Launcher Activity</string>
    <string name="rounded_corners_top">Enable Rounded Corners on Top</string>
    <string name="rounded_corners_bottom">Enable Rounded Corners on Bottom</string>
    <string name="cover_nav">Black-Out Navigation Bar</string>
    <string name="agree_to_terms">Please read and agree to the Terms of Use. If you are seeing this screen again, the terms have likely been updated.</string>
    <string name="view_terms_online">View Online</string>
    <string name="agree">I Agree</string>
    <string name="done">Done</string>
    <string name="terms">Terms</string>
    <string name="status_height">Status Bar Height</string>
    <string name="nav_height">Navigation Bar Height</string>
    <string name="top_corner_width">Top Corner Width</string>
    <string name="top_corner_height">Top Corner Height</string>
    <string name="bottom_corner_width">Bottom Corner Width</string>
    <string name="bottom_corner_height">Bottom Corner Height</string>
    <string name="options">Options</string>
    <string name="dimensions">Dimensions</string>
    <string name="settings">Settings</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>

    <string name="hide_notch_desc">Hide the notch!</string>

    <string name="main_screen_help">Tutorial</string>
    <string name="main_screen_help_desc">Not sure how to add the QS tile? Tap here.</string>

    <string name="main_screen_social_mastodon">Mastodon</string>
    <string name="main_screen_social_mastodon_desc">Follow me on Mastodon for updates about my apps and random development-related nonsense.</string>

    <string name="main_screen_social_website">Website</string>
    <string name="main_screen_social_website_desc">Check out my website if you\'re that bored.</string>

    <string name="main_screen_social_email">Email</string>
    <string name="main_screen_social_email_desc">Send me an email if you have a question or problem. Please include as much detail as possible. Just telling me \"it doesn\'t work\" just wastes everyone\'s time.</string>

    <string name="main_screen_social_telegram">Telegram</string>
    <string name="main_screen_social_telegram_desc">If email isn\'t your thing, you can ask your question in my Telegram server. Please mention which app you\'re using, as this server is for all of the ones I\'ve developed.</string>

    <string name="main_screen_social_github">GitHub</string>
    <string name="main_screen_social_github_desc">Nacho Notch is open source! If you\'re a developer or tinkerer interested in helping to improve the project (or you just want to check out the source), tap here.</string>

    <string name="settings_desc">Change the size of the bar, add rounded corners, black out the navigation bar, and more.</string>

    <string name="terms_desc">How to use Nacho Notch, what to expect from the app, and other things you should probably read over.</string>

    <!--Messages-->
    <string name="welcome_message">Hey! This screen doesn\'t do anything. Nacho Notch is using a QS Tile.\n\n<a href="https://youtu.be/HhH5wK1NokY">Tutorial</a></string>
    <string name="disable_activity">Disable this screen and hide the launcher icon</string>
    <string name="activity_disabled">Launcher activity disabled.</string>
    <string name="activity_enabled">Launcher activity enabled.</string>
    <string name="settings_prompt">Touch for settings</string>
    <string name="enable_overlay_permission">Please allow Nacho Notch to draw over other apps.</string>

    <string name="settings_hint">Tap the overflow menu to check out the settings! You can choose to black out the navigation bar along with the status bar, enable rounded corners, and even manually adjust the sizing of the blackouts.</string>

    <string name="back">Back</string>
</resources>
