<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:enabled="false"
        android:summary="@string/settings_hint"
        />

    <SwitchPreference
        android:title="@string/hide_notch"
        android:summary="@string/hide_notch_desc"
        android:key="enabled_indicator"
        />

    <com.xda.nachonotch.util.LinkPreference
        android:title="@string/main_screen_help"
        android:summary="@string/main_screen_help_desc"
        android:icon="@drawable/ic_baseline_help_outline_24"
        app:link="https://youtu.be/HhH5wK1NokY"
        />

    <com.xda.nachonotch.util.LinkPreference
        android:title="@string/main_screen_social_twitter"
        android:summary="@string/main_screen_social_twitter_desc"
        android:icon="@drawable/ic_baseline_twitter_24"
        app:link="https://twitter.com/Wander1236"
        />

    <com.xda.nachonotch.util.LinkPreference
        android:title="@string/main_screen_social_website"
        android:summary="@string/main_screen_social_website_desc"
        android:icon="@drawable/ic_baseline_earth_24"
        app:link="https://zwander.dev"
        />

    <com.xda.nachonotch.util.LinkPreference
        android:title="@string/main_screen_social_email"
        android:summary="@string/main_screen_social_email_desc"
        android:icon="@drawable/ic_baseline_email_24"
        app:link_type="email"
        />

    <com.xda.nachonotch.util.LinkPreference
        android:title="@string/main_screen_social_telegram"
        android:summary="@string/main_screen_social_telegram_desc"
        android:icon="@drawable/ic_baseline_telegram_24"
        app:link="https://bit.ly/ZachareeTG"
        />

    <com.xda.nachonotch.util.LinkPreference
        android:title="@string/main_screen_social_github"
        android:summary="@string/main_screen_social_github_desc"
        android:icon="@drawable/ic_baseline_github_24"
        app:link="https://github.com/zacharee/NachoNotch"
        />

</PreferenceScreen>