<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:title="@string/enable_launcher"
        android:key="enable_launcher"
        />

    <SwitchPreference
        android:title="@string/rounded_corners_top"
        android:key="rounded_corners"
        />

    <SwitchPreference
        android:title="@string/cover_nav"
        android:key="cover_nav"
        />

    <SwitchPreference
        android:title="@string/rounded_corners_bottom"
        android:key="rounded_corners_bottom"
        />

    <com.pavelsikun.seekbarpreference.SeekBarPreference
        android:title="@string/status_height"
        android:key="status_height"
        app:msbp_minValue="0"
        app:msbp_maxValue="300"
        />

    <com.pavelsikun.seekbarpreference.SeekBarPreference
        android:title="@string/nav_height"
        android:key="nav_height"
        app:msbp_minValue="0"
        app:msbp_maxValue="400"
        />

</PreferenceScreen>